--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,11 +55,10 @@ const stack = [
     <div id='particles3' class='fixed inset-0'></div>
   </div>
 
-  <!-- Dark Theme: Stars -->
-  <div class='absolute inset-0 bg-black hidden dark:block'>
-    <div id='stars1' class='fixed inset-0'></div>
-    <div id='stars2' class='fixed inset-0'></div>
-    <div id='stars3' class='fixed inset-0'></div>
+  <!-- Dark Theme: Modern Gradient Background -->
+  <div class='absolute inset-0 hidden dark:block'>
+    <div class='fixed inset-0 bg-gradient-to-b from-zinc-900 via-zinc-900/90 to-zinc-900/80'></div>
+    <div class='fixed inset-0 bg-[radial-gradient(circle_at_center,rgba(94,234,212,0.08)_0%,transparent_65%)]'></div>
   </div>
 
   <!-- Dark Theme: Twinkling Stars / Metors -->
@@ -97,8 +96,8 @@ const stack = [
     </div>
   </section>
 
-  <div class="relative bg-white dark:bg-dark">
-    <div class="mx-auto max-w-screen-sm p-5 space-y-8 pb-16">
+  <div class="relative">
+    <div class="mx-auto max-w-screen-sm p-5 space-y-12">
 
       <!-- About Section -->
       <section class="animate">
