--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -16,7 +16,7 @@ import PostComments from "@components/PostComments.astro";
     <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="da09ea80-2371-4852-929e-e3526fd74a6b" async></script>
     <script defer src="https://stats.mumentum.net/script.js" data-website-id="7fe9be9e-b963-4f2c-bf19-d6b88de8ea4f"></script>
   </head>
-  <body class="min-h-screen bg-white dark:bg-dark text-black/75 dark:text-dark-foreground">
+  <body class="min-h-screen bg-white dark:bg-[#0D0D0D] text-black/75 dark:text-white">
     <Header />
     <Drawer />
     <div class="relative">
