change font face

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,6 +74,22 @@
     font-style: normal;
     font-display: swap;
   }
+
+  @font-face {
+    font-family: "Cal Sans";
+    src: url("/fonts/CalSans-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "CaskaydiaMono Nerd Font";
+    src: url("/fonts/CaskaydiaMono-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
 }
 
 :root {
