--- a/src/layouts/ArticleTopLayout.astro
+++ b/src/layouts/ArticleTopLayout.astro
@@ -50,7 +50,7 @@ const repoUrl = collection === "projects" ? data.repoUrl : null
       </div>
     )}
   </div>
-  <h1 class="text-3xl font-semibold text-black dark:text-white mt-2 mb-4">
+  <h1 class="text-[clamp(3rem,3vw+2.25rem,4.5rem)] leading-tight font-semibold text-black dark:text-white mt-2 mb-4">
     {title}
   </h1>
   <div class="mt-1 mb-6">
