--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ const stack = [
       </div>
       
       <p class="animate text-xl sm:text-2xl text-black/75 dark:text-white/75 max-w-2xl mx-auto leading-relaxed">
-        I am just trying to find solutions the best way possible, regardless.
+      Welcome to my online presence. Read at your own risk. The contents of this site are a reflection of my thoughts, experiences, and projects. Feel free to explore and connect! PS: the contents here might be a bit unconventional / opinionated.
       </p>
 
       <div class="animate flex flex-wrap justify-center gap-4 pt-6">
