--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,10 +80,12 @@ const stack = [
         <div class="absolute -z-10 inset-0 blur-3xl opacity-20 bg-gradient-to-r from-blue-600 to-cyan-500 animate-pulse"></div>
       </div>
       
-      <p class="animate text-xl sm:text-2xl text-black/75 dark:text-white/75 max-w-2xl mx-auto leading-relaxed">
-      Welcome to my online presence. Read at your own risk. The contents of this site are a reflection of my thoughts, experiences, and projects. Feel free to explore and connect! PS: the contents here might be a bit unconventional / opinionated.
+      <p class="animate text-xl sm:text-1xl text-black/75 dark:text-white/75 max-w-2xl mx-auto leading-relaxed">
+      Welcome to my online presence. 
       </p>
-
+      <p class="animate text-xl sm:text-1xl text-black/75 dark:text-white/75 max-w-2xl mx-auto leading-relaxed">
+      The contents of this site are a reflection of my thoughts, experiences, and projects. Feel free to explore and connect! PS: the contents here might be a bit unconventional / opinionated.
+      </p>
       <div class="animate flex flex-wrap justify-center gap-4 pt-6">
         <a href="/blog" class="btn btn-primary transform hover:scale-105 transition-all">
           Read my blog
